--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🔮</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>每日一卦 - AI智能占卜</title>
     <meta name="description" content="融合中华古老智慧与现代AI技术，为您的人生指点迷津" />
